--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "@radix-ui/react-avatar": "^1.1.7",
     "@radix-ui/react-checkbox": "^1.1.1",
     "@radix-ui/react-dropdown-menu": "^2.1.1",
     "@radix-ui/react-label": "^2.1.0",
@@ -19,6 +20,7 @@
     "next": "latest",
     "next-themes": "^0.4.3",
     "prettier": "^3.3.3",
+    "radix-ui": "^1.3.4",
     "react": "19.0.0",
     "react-dom": "19.0.0"
   },
