--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "classnames": "^2.5.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.468.0",
+    "nanoid": "^5.1.5",
     "next": "latest",
     "next-themes": "^0.4.3",
     "prettier": "^3.3.3",
