--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "seed": "tsx ./data/index.ts"
   },
   "dependencies": {
     "@hookform/resolvers": "^5.0.1",
@@ -27,10 +28,13 @@
     "class-variance-authority": "^0.7.0",
     "classnames": "^2.5.1",
     "clsx": "^2.1.1",
+    "dotenv": "^16.5.0",
+    "drizzle-orm": "^0.43.1",
     "lucide-react": "^0.468.0",
     "nanoid": "^5.1.5",
     "next": "latest",
     "next-themes": "^0.4.3",
+    "pg": "^8.15.6",
     "prettier": "^3.3.3",
     "radix-ui": "^1.3.4",
     "react": "19.0.0",
@@ -42,14 +46,17 @@
   },
   "devDependencies": {
     "@types/node": "22.10.2",
+    "@types/pg": "^8.11.14",
     "@types/react": "^19.0.2",
     "@types/react-dom": "19.0.2",
+    "drizzle-kit": "^0.31.0",
     "eslint": "^9.25.1",
     "eslint-config-next": "15.3.1",
     "postcss": "8.4.49",
     "tailwind-merge": "^2.5.2",
     "tailwindcss": "3.4.17",
     "tailwindcss-animate": "^1.0.7",
+    "tsx": "^4.19.3",
     "typescript": "5.7.2"
   }
 }
