--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "react-hook-form": "^7.56.1",
+    "recharts": "^2.15.3",
     "tone": "^15.1.21",
     "zod": "^3.24.3",
     "zustand": "^5.0.3"
