--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "@radix-ui/react-toast": "^1.2.11",
     "@radix-ui/react-toggle": "^1.1.6",
     "@radix-ui/react-toggle-group": "^1.1.7",
+    "@stripe/react-stripe-js": "^3.7.0",
+    "@stripe/stripe-js": "^7.3.0",
     "@supabase/auth-helpers-nextjs": "^0.10.0",
     "@supabase/ssr": "^0.6.1",
     "@supabase/supabase-js": "latest",
@@ -35,7 +37,7 @@
     "drizzle-orm": "^0.43.1",
     "lucide-react": "^0.468.0",
     "nanoid": "^5.1.5",
-    "next": "latest",
+    "next": "^15.3.2",
     "next-themes": "^0.4.3",
     "pg": "^8.15.6",
     "prettier": "^3.3.3",
@@ -44,6 +46,7 @@
     "react-dom": "19.0.0",
     "react-hook-form": "^7.56.1",
     "recharts": "^2.15.3",
+    "stripe": "^18.1.1",
     "tone": "^15.1.21",
     "zod": "^3.24.3",
     "zustand": "^5.0.3"
