active practice styling

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^5.0.1",
+    "@radix-ui/react-accordion": "^1.2.11",
     "@radix-ui/react-avatar": "^1.1.7",
     "@radix-ui/react-checkbox": "^1.1.1",
     "@radix-ui/react-dialog": "^1.1.11",
@@ -29,6 +30,7 @@
     "@supabase/auth-helpers-nextjs": "^0.10.0",
     "@supabase/ssr": "^0.6.1",
     "@supabase/supabase-js": "latest",
+    "accordion": "^3.0.2",
     "autoprefixer": "10.4.20",
     "class-variance-authority": "^0.7.0",
     "classnames": "^2.5.1",
@@ -46,6 +48,7 @@
     "react-dom": "19.0.0",
     "react-hook-form": "^7.56.1",
     "recharts": "^2.15.3",
+    "shadcn": "^2.5.0",
     "stripe": "^18.1.1",
     "tone": "^15.1.21",
     "zod": "^3.24.3",
